--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header>
             <h1 class="main-title">OXBO STORE</h1>
             <p class="tagline">നിങ്ങളുടെ ഫാഷൻ ലക്ഷ്യം</p>
-            <a href="https://chat.whatsapp.com/LKDc6h5uM7L1k2n5G6R9T0" target="_blank" class="whatsapp-button">
+            <a href="https://chat.whatsapp.com/BZAukleT1fkHQATumE9ISr?mode=ac_t" target="_blank" class="whatsapp-button">
                 ഞങ്ങളുടെ വാട്സ്ആപ്പ് ഗ്രൂപ്പിൽ ചേരുക
             </a>
         </header>
