--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h2>വാച്ചുകൾ</h2>
                 <div class="product-grid">
                     <div class="product-item">
-                        <img src="https://via.placeholder.com/200x200?text=Watch+1" alt="Watch 1">
+                        <img src="watch.jpg" alt="Watch 1">
                         <h3>സ്റ്റൈലിഷ് വാച്ച്</h3>
                         <p>₹ 2499</p>
                         <button>കൂടുതൽ വിവരങ്ങൾ</button>
