--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header>
             <h1 class="main-title">OXBO STORE</h1>
             <p class="tagline">നിങ്ങളുടെ ഫാഷൻ ലക്ഷ്യം</p>
-            <a href="https://chat.whatsapp.com/BZAukleT1fkHQATumE9ISr?mode=ac_t" target="_blank" class="whatsapp-button">
+            <a href="https://chat.whatsapp.com/LKDc6h5uM7L1k2n5G6R9T0" target="_blank" class="whatsapp-button">
                 ഞങ്ങളുടെ വാട്സ്ആപ്പ് ഗ്രൂപ്പിൽ ചേരുക
             </a>
         </header>
@@ -48,9 +48,9 @@
                 <h2>വാച്ചുകൾ</h2>
                 <div class="product-grid">
                     <div class="product-item">
-                        <img src="watch.jpg" alt="Watch 1">
+                        <img src="https://via.placeholder.com/200x200?text=Watch+1" alt="Watch 1">
                         <h3>സ്റ്റൈലിഷ് വാച്ച്</h3>
-                        <p>₹ 799</p>
+                        <p>₹ 2499</p>
                         <button>കൂടുതൽ വിവരങ്ങൾ</button>
                     </div>
                     <div class="product-item">
@@ -60,6 +60,9 @@
                         <button>കൂടുതൽ വിവരങ്ങൾ</button>
                     </div>
                     </div>
+                <div class="more-button-container">
+                    <a href="watches.html" class="more-button">കൂടുതൽ വാച്ചുകൾ</a>
+                </div>
             </div>
         </section>
 
@@ -76,4 +79,4 @@
 
     <script src="script.js"></script>
 </body>
-                      </html>
+</html>
