--- a/index.html
+++ b/index.html
@@ -3,78 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OXBO STORE</title>
+    <title>OXBO STORE - Loading</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
 
+    <!-- Loading Screen -->
     <div id="loading-screen">
-        <h1 class="loading-title">OXBO STORE</h1>
-        <p class="loading-text">Loading...</p>
-        <div class="loading-counter" id="loading-counter">0</div>
-    </div>
-
-    <div id="main-content" style="display: none;">
-        <header>
-            <h1 class="main-title">OXBO STORE</h1>
-            <p class="tagline">നിങ്ങളുടെ ഫാഷൻ ലക്ഷ്യം</p>
-            <a href="https://chat.whatsapp.com/LKDc6h5uM7L1k2n5G6R9T0" target="_blank" class="whatsapp-button">
-                ഞങ്ങളുടെ വാട്സ്ആപ്പ് ഗ്രൂപ്പിൽ ചേരുക
-            </a>
-        </header>
-
-        <section class="products">
-            <div class="product-category">
-                <h2>വസ്ത്രങ്ങൾ</h2>
-                <div class="product-grid">
-                    <div class="product-item">
-                        <img src="https://via.placeholder.com/200x200?text=Dress+1" alt="Dress 1">
-                        <h3>ആകർഷകമായ ഡ്രസ്സ്</h3>
-                        <p>₹ 1299</p>
-                        <button>കൂടുതൽ വിവരങ്ങൾ</button>
-                    </div>
-                    <div class="product-item">
-                        <img src="https://via.placeholder.com/200x200?text=Dress+2" alt="Dress 2">
-                        <h3>ട്രെൻഡി ഡ്രസ്സ്</h3>
-                        <p>₹ 1599</p>
-                        <button>കൂടുതൽ വിവരങ്ങൾ</button>
-                    </div>
-                    </div>
-            </div>
-
-            <div class="product-category">
-                <h2>വാച്ചുകൾ</h2>
-                <div class="product-grid">
-                    <div class="product-item">
-                        <img src="https://via.placeholder.com/200x200?text=Watch+1" alt="Watch 1">
-                        <h3>സ്റ്റൈലിഷ് വാച്ച്</h3>
-                        <p>₹ 2499</p>
-                        <button>കൂടുതൽ വിവരങ്ങൾ</button>
-                    </div>
-                    <div class="product-item">
-                        <img src="https://via.placeholder.com/200x200?text=Watch+2" alt="Watch 2">
-                        <h3>സ്മാർട്ട് വാച്ച്</h3>
-                        <p>₹ 3999</p>
-                        <button>കൂടുതൽ വിവരങ്ങൾ</button>
-                    </div>
-                    </div>
-                <div class="more-button-container">
-                    <a href="watches.html" class="more-button">കൂടുതൽ വാച്ചുകൾ</a>
-                </div>
-            </div>
-        </section>
-
-        <footer>
-            <div class="contact-info">
-                <h3>ഞങ്ങളെ സമീപിക്കുക</h3>
-                <p><i class="fas fa-phone"></i> 9947772513</p>
-                <p>Email: info@oxbostore.com</p>
-                <p>വിലാസം: നിങ്ങളുടെ കടയുടെ വിലാസം, നഗരം</p>
-            </div>
-            <p>&copy; 2025 OXBO STORE. എല്ലാ അവകാശങ്ങളും നിക്ഷിപ്തം.</p>
-        </footer>
+        <div class="oxbo-square">
+            <h1 class="loading-title">OXBO STORE</h1>
+        </div>
+        <div class="loading-animation"></div>
+        <p class="loading-text-counter">ലോഡ് ചെയ്യുന്നു...</p>
     </div>
 
     <script src="script.js"></script>
