--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
                 <a href="watches_new.html" class="watch-button">വാച്ചുകൾ</a>
                 <a href="products.html" class="products-button">വസ്ത്രങ്ങൾ & കൂടുതൽ</a>
             </div>
-            <a href="https://chat.whatsapp.com/LKDc6h5uM7L1k2n5G6R9T0" target="_blank" class="whatsapp-group-button">
+            <a href="https://chat.whatsapp.com/BZAukleT1fkHQATumE9ISr?mode=ac_t" target="_blank" class="whatsapp-group-button">
                 ഞങ്ങളുടെ വാട്സ്ആപ്പ് ഗ്രൂപ്പിൽ ചേരുക, കൂടുതൽ കളക്ഷനുകൾക്കായി!
             </a>
         </div>
