--- a/watches.html
+++ b/watches.html
@@ -39,11 +39,11 @@
             <div class="watch-item">
                 <img src="https://via.placeholder.com/250x250?text=Classic+Watch+4" alt="Watch 6">
                 <h3>ക്ലാസിക് ലെതർ വാച്ച്</h3>
-                <p>₹ 2999</p>
+                <p>₹ 799</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
             </div>
             <div class="watch-item">
-                <img src="https://via.placeholder.com/250x250?text=Kids+Watch+5" alt="Watch 7">
+                <img src="watch.jpg" alt="Watch 7">
                 <h3>കുട്ടികൾക്കുള്ള കളർഫുൾ വാച്ച്</h3>
                 <p>₹ 999</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
