--- a/watches.html
+++ b/watches.html
@@ -37,7 +37,7 @@
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
             </div>
             <div class="watch-item">
-                <img src="https://via.placeholder.com/250x250?text=Classic+Watch+4" alt="Watch 6">
+                <img src="watch.jpg" alt="Watch 6">
                 <h3>ക്ലാസിക് ലെതർ വാച്ച്</h3>
                 <p>₹ 799</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
