--- a/watches.html
+++ b/watches.html
@@ -19,9 +19,9 @@
         <h1>ഞങ്ങളുടെ വാച്ച് ശേഖരം</h1>
         <div class="watches-grid">
             <div class="watch-item">
-                <img src="https://via.placeholder.com/250x250?text=Premium+Watch+1" alt="Watch 3">
-                <h3>പ്രീമിയം സ്മാർട്ട് വാച്ച്</h3>
-                <p>₹ 4999</p>
+                <img src="watch2.jpg" alt="Watch 3">
+                <h3>vintage watch</h3>
+                <p>₹ 799</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
             </div>
             <div class="watch-item">
