--- a/watches_new.html
+++ b/watches_new.html
@@ -18,33 +18,33 @@
     <section class="watches-collection">
         <div class="watches-grid-new">
             <div class="watch-item-new">
-                <img src="https://placehold.co/300x300/e0e0e0/333333?text=Smart+Watch" alt="Smart Watch">
-                <h3>സ്മാർട്ട് വാച്ച് പ്രോ</h3>
-                <p>വില: ₹ 4,999</p>
+                <img src="watch.jpg" alt="Smart Watch">
+                <h3>premium look watch</h3>
+                <p>വില: ₹ 799</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
             </div>
             <div class="watch-item-new">
                 <img src="https://placehold.co/300x300/d0d0d0/333333?text=Luxury+Watch" alt="Luxury Watch">
-                <h3>ആഡംബര ഡിസൈനർ വാച്ച്</h3>
-                <p>വില: ₹ 7,999</p>
+                <h3>vintage watch</h3>
+                <p>വില: ₹ 799</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
             </div>
             <div class="watch-item-new">
                 <img src="https://placehold.co/300x300/c0c0c0/333333?text=Sport+Watch" alt="Sport Watch">
-                <h3>സ്പോർട്സ് ഫിറ്റ്നസ് വാച്ച്</h3>
-                <p>വില: ₹ 3,499</p>
+                <h3>leather watch</h3>
+                <p>വില: ₹ 799</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
             </div>
             <div class="watch-item-new">
                 <img src="https://placehold.co/300x300/b0b0b0/333333?text=Classic+Watch" alt="Classic Watch">
                 <h3>ക്ലാസിക് ലെതർ വാച്ച്</h3>
-                <p>വില: ₹ 2,999</p>
+                <p>വില: ₹ 799</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
             </div>
             <div class="watch-item-new">
                 <img src="https://placehold.co/300x300/a0a0a0/333333?text=Kids+Watch" alt="Kids Watch">
                 <h3>കുട്ടികൾക്കുള്ള വാച്ച്</h3>
-                <p>വില: ₹ 1,299</p>
+                <p>വില: ₹ 699</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
             </div>
         </div>
@@ -55,7 +55,7 @@
             <h3>ഞങ്ങളെ സമീപിക്കുക</h3>
             <p><i class="fas fa-phone"></i> 9947772513</p>
             <p>Email: info@oxbostore.com</p>
-            <p>വിലാസം: നിങ്ങളുടെ കടയുടെ വിലാസം, നഗരം</p>
+            <p>വിലാസം: kerala kottayam pallom (near postoffice)</p>
         </div>
         <p>&copy; 2025 OXBO STORE. എല്ലാ അവകാശങ്ങളും നിക്ഷിപ്തം.</p>
     </footer>
