--- a/watches_new.html
+++ b/watches_new.html
@@ -24,7 +24,7 @@
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
             </div>
             <div class="watch-item-new">
-                <img src="https://placehold.co/300x300/d0d0d0/333333?text=Luxury+Watch" alt="Luxury Watch">
+                <img src="watch premium.jpg" alt="Luxury Watch">
                 <h3>vintage watch</h3>
                 <p>വില: ₹ 799</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
