--- a/watches_new.html
+++ b/watches_new.html
@@ -30,7 +30,7 @@
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
             </div>
             <div class="watch-item-new">
-                <img src="https://placehold.co/300x300/c0c0c0/333333?text=Sport+Watch" alt="Sport Watch">
+                <img src="leather watch.jpg" alt="Sport Watch">
                 <h3>leather watch</h3>
                 <p>വില: ₹ 799</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
