--- a/watches_new.html
+++ b/watches_new.html
@@ -36,7 +36,7 @@
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
             </div>
             <div class="watch-item-new">
-                <img src="https://placehold.co/300x300/b0b0b0/333333?text=Classic+Watch" alt="Classic Watch">
+                <img src="classic leather.jpg" alt="Classic Watch">
                 <h3>ക്ലാസിക് ലെതർ വാച്ച്</h3>
                 <p>വില: ₹ 799</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
