--- a/watches.html
+++ b/watches.html
@@ -26,12 +26,12 @@
             </div>
             <div class="watch-item">
                 <img src="https://via.placeholder.com/250x250?text=Luxury+Watch+2" alt="Watch 4">
-                <h3>ആഢംബര ഡിസൈനർ വാച്ച്</h3>
-                <p>₹ 7499</p>
+                <h3>classical leather watch</h3>
+                <p>₹ 799</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
             </div>
             <div class="watch-item">
-                <img src="https://via.placeholder.com/250x250?text=Sport+Watch+3" alt="Watch 5">
+                <img src="classic leather.jpg" alt="Watch 5">
                 <h3>സ്പോർട്സ് ഫിറ്റ്നസ് വാച്ച്</h3>
                 <p>₹ 3499</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
