--- a/watches_new.html
+++ b/watches_new.html
@@ -24,13 +24,13 @@
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
             </div>
             <div class="watch-item-new">
-                <img src="watch premium.jpg" alt="Luxury Watch">
+                <img src="watch premium.jpg" alt="premium watch">
                 <h3>vintage watch</h3>
                 <p>വില: ₹ 799</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
             </div>
             <div class="watch-item-new">
-                <img src="leather watch.jpg" alt="Sport Watch">
+                <img src="leather watch.jpg" alt="leather watch">
                 <h3>leather watch</h3>
                 <p>വില: ₹ 799</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
