--- a/watches.html
+++ b/watches.html
@@ -25,7 +25,7 @@
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
             </div>
             <div class="watch-item">
-                <img src="https://via.placeholder.com/250x250?text=Luxury+Watch+2" alt="Watch 4">
+                <img src="classic leather.jpg" alt="Watch 4">
                 <h3>classical leather watch</h3>
                 <p>₹ 799</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
