--- a/watches_new.html
+++ b/watches_new.html
@@ -24,7 +24,7 @@
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
             </div>
             <div class="watch-item-new">
-                <img src="watch premium.jpg" alt="premium watch">
+                <img src="vintage watch.jpg" alt="premium watch">
                 <h3>vintage watch</h3>
                 <p>വില: ₹ 799</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
