--- a/watches_new.html
+++ b/watches_new.html
@@ -30,8 +30,8 @@
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
             </div>
             <div class="watch-item-new">
-                <img src="leather watch.jpg" alt="leather watch">
-                <h3>leather watch</h3>
+                <img src="trending watch.jpg" alt="leather watch">
+                <h3>trending watch</h3>
                 <p>വില: ₹ 799</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
             </div>
