--- a/watches_new.html
+++ b/watches_new.html
@@ -42,7 +42,7 @@
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
             </div>
             <div class="watch-item-new">
-                <img src="https://placehold.co/300x300/a0a0a0/333333?text=Kids+Watch" alt="Kids Watch">
+                <img src="soon.png">
                 <h3>കുട്ടികൾക്കുള്ള വാച്ച്</h3>
                 <p>വില: ₹ 699</p>
                 <button>ഇപ്പോൾ വാങ്ങുക</button>
