--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OXBO STORE - Loading</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <div class="loading-container">
-        <h1 class="oxbo-title">OXBO STORE</h1>
-        <p class="tagline">Chase Your Passion With OXBO STORE</p>
+    <!-- Loading Screen -->
+    <div id="loading-screen">
+        <div class="oxbo-square">
+            <h1 class="loading-title">OXBO STORE</h1>
+        </div>
+        <div class="loading-animation"></div>
+        <p class="loading-text-counter">ലോഡ് ചെയ്യുന്നു...</p>
     </div>
 
+    <script src="script.js"></script>
 </body>
 </html>
